Добавлен еще один контейнер

--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
         <h3 class="text_h3__card_two">Замок Гарибальди</h3>
         <p class="text_p__card_two">Замок принадлежит местному бизнемену Олегу Гарибальдиевичу Кузичкину. Замок он посвятил своему отцу.</p>
       </div>
-    </section>
+      <div class='card card_free'>
+        <img class="img__card_free img" src="img/iesus.jpg" alt="Тут будет картинка">
+        <h3 class="text_h3__card_free">Римско-католический Кафедральный собор Непорочного Зачатия Пресвятой Девы Марии</h3>
+        <p class="text_p__card_free">Неоготический собор в Москве, крупнейший католический собор в
+        России, кафедральный собор архиепархии Матери Божией, возглавляемой архиепископом митрополитом Паоло Пецци.</p>
+      </div>
+          </section>
   </header>
 </body>
 
