Сброс HTML и CSS

--- a/index.html
+++ b/index.html
@@ -3,32 +3,14 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Путешествия по России</title>
+  <title>Яндекс проект</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <header>
-    <h1>Удивительные места России</h1>
-    <section class="section">
-      <div class='card card_one'>
-        <img class="img__card_one img"  src="img/bikovo.jpg" alt="Тут будет картинка">
-        <h3 class="text_h3__card_one">Церковь Владимирской иконы Божией Матери</h3>
-        <p class="text_p__card_one">Приходская церковь Коломенской епархии Русской православной церкви в селе Быково Раменского района Московской области,
-        памятник русской готики XVIII века.</p>
-      </div>
-      <div class='card card_two'>
-        <img class="img__card_two img" src="img/garibaldy.jpg" alt="Тут будет картинка">
-        <h3 class="text_h3__card_two">Замок Гарибальди</h3>
-        <p class="text_p__card_two">Замок принадлежит местному бизнемену Олегу Гарибальдиевичу Кузичкину. Замок он посвятил своему отцу.</p>
-      </div>
-      <div class='card card_free'>
-        <img class="img__card_free img" src="img/iesus.jpg" alt="Тут будет картинка">
-        <h3 class="text_h3__card_free">Римско-католический Кафедральный собор Непорочного Зачатия Пресвятой Девы Марии</h3>
-        <p class="text_p__card_free">Неоготический собор в Москве, крупнейший католический собор в
-        России, кафедральный собор архиепархии Матери Божией, возглавляемой архиепископом митрополитом Паоло Пецци.</p>
-      </div>
-          </section>
+    <h1>Проект</h1>
+  </section>
   </header>
 </body>
 
